--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ body {
         background-color: #fff;
         border-radius: 8px;
         overflow: hidden;
+        box-shadow: 0 15px 30px 0 rgba(0, 81, 171, 0.15);
         
         .top {
             padding: 40px;
